# bmkg_data

./: .gitignore  Data cleaning problem logs.xlsx  README.md  bmkg_helper_functions.py  bmkg_to_nc_file.py  check_stations_completeness.py  create_bmkg_shapefile.py  example_read_bmkg_nc.py  example_visualize_input_stations.py  pyproject.toml  visualize_station_and_watershed.py
examples/: example_clean_raw_bmkg_excel.py  example_read_bmkg_nc.py  example_visualize_city.py  visualize_station_and_watershed.py
sample_data/: Stasiun Meteorologi Maritim Tenau.xlsx
