[tool.poetry]
name = "bmkg"
version = "0.1.0"
description = ""
authors = ["Nathasya Christien <nathasya.abenita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xarray = "^2026.2.0"
geopandas = "^1.1.3"
shapely = "^2.1.2"
contextily = "^1.7.0"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
